# minitorch

./: .gitignore  CMakeLists.txt  README.md  configure.ps1  session.md
examples/gpt/: CMakeLists.txt
examples/gpt/data/: input.txt
examples/gpt/include/: dataloader.hpp  gpt.hpp  tokenizer.hpp
examples/gpt/src/: gpt.cpp  tokenizer.cpp  train_gpt.cpp
examples/gpt/tests/: gpt_test.cpp
include/minitorch/: autograd.hpp  dtype.hpp  nn.hpp  optim.hpp  storage.hpp  tensor.hpp
src/: nn.cpp  optim.cpp  tensor.cpp
tests/: tensor_test.cpp
